released Selenide 7.6.1